tests/lsp/text_document/snapshots/lsp__text_document__completion__theorem_begin.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\newtheorem{lemma}{Lemma}\n\\begin{lem\n        |\n       ^^^\"#)"
---
[
  {
    "label": "lemma",
    "detail": "user-defined",
    "preselect": false
  }
]
