tests/lsp/text_document/snapshots/lsp__text_document__completion__user_command.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\foobar\n\\fooba\n   |\n ^^^^^\n\\begin{foo}\n\\end{foo}\n\\begin{fo}\"#)"
---
[
  {
    "label": "foobar",
    "detail": "user-defined",
    "preselect": false
  }
]
